src/objects/Price_Adjustment__c.object
<CustomObject>
    <description>AstrumCRM - An object for tracking pricing adjustments to be applied to a calculated system price on a System Design Quote.</description>
    <fields>
        <fullName>Adjustment_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adjustment Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_per_Watt__c</fullName>
        <label>Amount per Watt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicable_Scenario__c</fullName>
        <label>Applicable Scenario</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apply_as_Net_Adjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply as Net Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Adjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is to signify that this adjustment is handled automatically by the Financing Product Pricing module.</description>
        <inlineHelpText>This is to signify that this adjustment is handled automatically by the Financing Product Pricing module.</inlineHelpText>
        <label>Channel Partner Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DE_Outbound_Referral_Offer__c</fullName>
        <description>Look up Entitlement Offer Picklist value willl determine the destination for outbound lead generation among DE sister companies.</description>
        <formula>Entitlement_Offer__r.DE_Outbound_Referral_Offer__c</formula>
        <inlineHelpText>Look up Entitlement Offer Picklist value willl determine the destination for outbound lead generation among DE sister companies.</inlineHelpText>
        <label>DE Outbound Referral Offer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Dollar_Amount__c</fullName>
        <description>This is the dollar amount that is calculated during the pricing process, this is what is see on the customer facing documents.</description>
        <inlineHelpText>This is the dollar amount that is calculated during the pricing process, this is what is see on the customer facing documents.</inlineHelpText>
        <label>Effective Dollar Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Entitlement_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entitlement Offer</label>
        <referenceTo>Entitlement_Offer__c</referenceTo>
        <relationshipLabel>Price Adjustments</relationshipLabel>
        <relationshipName>Price_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financing_Option__c</fullName>
        <formula>if(Promotion__c != null
  ,text(Promotion__r.Financing_Option__c)
  ,text(Entitlement_Offer__r.Financing_Option__c)
)</formula>
        <label>Financing Option</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financing_Type__c</fullName>
        <formula>if(Promotion__c != null
  ,text(Promotion__r.Financing_Type__c)
  ,text(Entitlement_Offer__r.Financing_Type__c)
)</formula>
        <label>Financing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Rate__c</fullName>
        <label>Guaranteed Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lease_Fund__c</fullName>
        <formula>if(Promotion__c != null
  ,Promotion__r.Lease_Fund__r.Name
  ,Entitlement_Offer__r.Lease_Fund__r.Name
)</formula>
        <label>Lease Fund</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leasing_Option__c</fullName>
        <formula>if(Promotion__c != null
  ,text(Promotion__r.Leasing_Option__c)
  ,text(Entitlement_Offer__r.Leasing_Option__c)
)</formula>
        <label>Leasing Option</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_Out_of_Adjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt Out of Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <label>Percent</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Procurement_Required__c</fullName>
        <formula>Entitlement_Offer__r.Procurement_Required__c</formula>
        <label>Procurement Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Production_Guarantee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Production Guarantee?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promotion_Type__c</fullName>
        <formula>Promotion__r.RecordType.DeveloperName</formula>
        <label>Promotion Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipLabel>Price Adjustments</relationshipLabel>
        <relationshipName>Price_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecordTypeDeveloperName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordTypeDeveloperName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Design_Quote__c</fullName>
        <label>System Design Quote</label>
        <referenceTo>System_Design_Quote__c</referenceTo>
        <relationshipLabel>Price Adjustments</relationshipLabel>
        <relationshipName>Price_Adjustments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Line Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP Override</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Price Adjustment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Adjustments</pluralLabel>
    <recordTypes>
        <fullName>Dollar_Amount</fullName>
        <active>true</active>
        <label>Dollar Amount</label>
    </recordTypes>
    <recordTypes>
        <fullName>Percentage</fullName>
        <active>true</active>
        <label>Percentage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rate</fullName>
        <active>true</active>
        <label>Rate</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Applicable_Scenario_required</fullName>
        <active>true</active>
        <errorConditionFormula>isblank( text(Applicable_Scenario__c) )</errorConditionFormula>
        <errorDisplayField>Applicable_Scenario__c</errorDisplayField>
        <errorMessage>Applicable Scenario required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Record_is_Locked</fullName>
        <active>true</active>
        <errorConditionFormula>IF($Profile.Name = &apos;System Administrator&apos;, false, PRIORVALUE(Locked__c) = true)</errorConditionFormula>
        <errorMessage>Record is part of a closed Contract, and is locked from further editing</errorMessage>
    </validationRules>
</CustomObject>